# digging-jim-remake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/: builder.txt  credits.txt
assets/shaders/: tint.frag
editor/: CMakeLists.txt
editor/include/Editor/: Editor.h
editor/include/HUD/: Panel.h  Toolbar.h
editor/res/: builder.rc
editor/src/: main.cpp
editor/src/Editor/: Editor.cpp
editor/src/HUD/: Panel.cpp  Toolbar.cpp
game/: CMakeLists.txt
game/include/Game/: Game.h  State.h
game/res/: game.rc
game/src/: main.cpp
game/src/Game/: Game.cpp  Settings.cpp
include/Camera/: Camera.h
include/Cave/Entity/: Aggressor.h  Amoeba.h  Animation.h  Base.h  Boulder.h  BreakingFragileDiamond.h  DetonatorTriggered.h  Diamond.h  Eater.h  Entity.h  ExitDoor.h  ExitDoorOpen.h  ExitDoorOpening.h  Explosion.h  Facing.h  FragileDiamond.h  HorizontalWall.h  Jim.h  MagicWallInactive.h  MagicWallUsed.h  NoEntity.h  Ore.h  Plasma.h  StartDoorOpen.h  TNT.h  Transition.h  TubeCross.h  TubeDown.h  TubeHorizontal.h  TubeLeft.h  TubeUp.h  TubeVertical.h  Type.h  VerticalWall.h
include/Cave/Manager/: File.h  Manager.h
include/Cave/Map/: Map.h
include/Cave/Properties/: Properties.h
include/Cave/State/: State.h
include/Game/: Game.h  Settings.h  Signal.h
include/HUD/Developer/: CameraCenter.h
include/HUD/Editor/: Panel.h
include/HUD/Level/: Panel.h
include/HUD/MainMenu/: MainMenu.h
include/Image/: Icon.h  Manager.h  Texture.h
include/Input/: Input.h
include/Renderer/: TileRenderer.h
include/Shader/: Shader.h
include/Utils/: Counter.h  Random.h
lib/: CMakeLists.txt
lib/include/Camera/: Camera.h
lib/include/Cave/Entity/: Base.h  Bomb.h  CaveGull.h  CaveGullExplosion.h  Cilia.h  Detonator.h  DetonatorUsed.h  Direction.h  Dirt.h  Entity.h  ExitDoorComplete.h  ExitDoorFinished.h  HorizontalWallPlaceholder.h  MagicWallActive.h  OreTransformation.h  Protozo.h  SolidWall.h  Space.h  StartDoor.h  Trait.h  TubeRight.h  Type.h  VerticalWallPlaceholder.h  Wall.h
lib/include/Cave/Manager/: Data.h  File.h  Manager.h
lib/include/Cave/Map/: Map.h
lib/include/Cave/Properties/: Properties.h
lib/include/Cave/Settings/: Settings.h
lib/include/Cave/State/: State.h
lib/include/HUD/Developer/: FPSCounter.h  PositionDisplay.h
lib/include/HUD/Level/: Panel.h
lib/include/HUD/MainMenu/: MainMenu.h
lib/include/Image/: Texture.h
lib/include/Input/: Input.h
lib/include/Renderer/: TextRenderer.h  TileRenderer.h
lib/include/Sound/: Effect.h  Manager.h  Music.h
lib/include/Utils/: Counter.h
lib/src/Camera/: Camera.cpp
lib/src/Cave/Manager/: Data.cpp  File.cpp  Manager.cpp
lib/src/Cave/Map/: Camera.cpp  Enemy.cpp  Falling.cpp  Jim.cpp  Map.cpp  Movement.cpp  Update.cpp
lib/src/Cave/Properties/: Properties.cpp
lib/src/Cave/Settings/: Settings.cpp
lib/src/HUD/Developer/: FPSCounter.cpp  PositionDisplay.cpp
lib/src/HUD/Level/: Panel.cpp
lib/src/HUD/MainMenu/: MainMenu.cpp
lib/src/Image/: Manager.cpp
lib/src/Renderer/: TextRenderer.cpp  TileRenderer.cpp
lib/src/Shader/: Shader.cpp
lib/src/Sound/: Manager.cpp
lib/src/Utils/: Counter.cpp
lib/tinyfiledialogs/: tinyfiledialogs.c
src/Camera/: Camera.cpp
src/Cave/Manager/: Data.cpp  File.cpp  Manager.cpp
src/Cave/Map/: Camera.cpp  Entity.cpp  Map.cpp  Misc.cpp  Static.cpp  Update.cpp
src/Cave/Properties/: Properties.cpp
src/Game/: Game.cpp
src/HUD/Developer/: CameraCenter.cpp  FPSCounter.cpp  PositionDisplay.cpp
src/HUD/Editor/: Panel.cpp
src/HUD/Level/: Panel.cpp
src/HUD/MainMenu/: MainMenu.cpp
src/Image/: Manager.cpp
src/Input/: Input.cpp
src/Renderer/: TileRenderer.cpp
src/Shader/: Shader.cpp
src/Sound/: Manager.cpp
src/Utils/: Counter.cpp
